<resources>
    <string name="app_name">SHOTOP</string>
    <string name="splashString">Bem-Vindo!</string>
    <string name="mainTextWelcome">Aqui irá nascer o shotop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="faz_o_teu_registo">Faz o teu registo!</string>
    <string name="password">Password</string>
    <string name="confirmar_password">Confirmar Password</string>
    <string name="regista_te_no_shotop_de_modo_a_acederes_a_todas_as_funcionalidades">Regista-te no Shotop de modo a acederes a todas as funcionalidades</string>
    <string name="registar">Registar</string>
    <string name="nome">Nome</string>
    <string name="email_hint">johndoe@example.com</string>
    <string name="password_hint">*******</string>
    <string name="welcome_login2">Entre na sua conta Shotop</string>
    <string name="welcome_login1">Bem-vindo de volta!</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="outro_logins_label">Ou conecte-se com</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="dont_have_account">Não tem uma conta?</string>
    <string name="register_link_text">Registar</string>
    <string name="search">Pesquisa…</string>
    <string name="facebook_app_id">259837839464229</string>
    <string name="fb_login_protocol_scheme">fb259837839464229</string>
    <string name="mapa">Mapa</string>
    <string name="adicionar">Adicionar</string>
    <string name="comunidade">Comunidade</string>
    <string name="log_out">Log Out</string>
    <string name="email">Email</string>
    <string name="bemvindoFoto">Bem-Vindo! Adicionar Foto com IA!</string>
    <string name="tireUmafoto">Capture uma nova fotografia!</string>
    <string name="capturar">CAPTURAR FOTO</string>
    <string name="tirar_foto">Tirar Foto</string>
    <string name="recriar_foto">Recriar Foto</string>
    <string name="CameraOverlay">Camera Overlay</string>
    <string name="escolherFoto">Escolher foto Galeria</string>
    <string name="repetir">Repetir Foto</string>
    <string name="continuar">Confirmar</string>
    <string name="submeter">Submeter</string>
    <string name="MySpots">Meus Spots</string>
    <string name="foto">Tirar Foto!</string>
    <string name="participar">Participar No Desafio</string>
    <string name="cameraEscolha">Escolha que processo deseja seguir:</string>
    <string name="desafio">DESAFIO</string>
    <string name="btnCamera1">Camera Default</string>
    <string name="btnCamera2">Sobrepor a imagem</string>
    <string name="criar_desafio">Criar desafio</string>
    <string name="terminar_desafio">Terminar desafio</string>
    <string name="desafio_criado">Desafio a decorrer</string>
    <string name="vertical">Vertical</string>
    <string name="hori">Horizontal</string>
    <string name="selecione">Selecione a orientação da sua foto:</string>




</resources>